--- a/style.css
+++ b/style.css
@@ -2,9 +2,90 @@ body
 h1{
   background-color:rgba(255, 0, 0, 0.5);
   text-align: center;
+}
 
 h3{
-  top: 40px;
-  left: 560px;
+  border-bottom: 10px solid red;
 
+}
+
+#object {
+  position: absolute;
+  top: 50px;
+  left: 100px;
+}
+#skills{
+  position: absolute;
+  top: 330px;
+  left: 100px;
+}
+#experience {
+  position: absolute;
+  top: 45px;
+  left: 590px;
+float: left;
+
+
+
+}
+
+#education {
+  position: absolute;
+  top: 340px;
+  left: 590px;
+}
+
+#volunteer {
+  position: absolute;
+  top: 640px;
+  left: 590px;
+}
+
+
+.social-menu ul{
+  position: relative;
+  top: 700px;
+  left: 0;
+  transform: translate(10%, 10%);
+  font-size: 40px;
+  display: flex;
+}
+
+.social-menu ul li {
+  list-style: none;
+}
+.social-menu ul li .fa {
+  font-size: 10px;
+  line-height: 100px;
+  transition: 10px;
+  color: rgba(255, 0, 0, 0.5);
+}
+
+.social-menu ul li a {
+  position: relative;
+  display: block;
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  background-color: rgba(255, 0, 0, 0.5);
+  text-align: center;
+  box-shadow: 0 5px 4px rgba(255, 0, 0, 0.5);
+}
+
+.social-menu ul li p{
+  position: relative;
+  font-size: 10px;
+  display: flex;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+
+}
+
+}
+
+.quick-link{
+display: flex;
+position: relative;
+top: 700px;
 }
